fixed a layout bug

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,7 +64,7 @@
     box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25), inset 0px 0px 0px 5px #32B72F;
     display: flex;
     flex-direction: column;
-    padding: 18px 14px 14px 14px;
+    padding: 18px 14px 12.5px 14px;
     justify-content: space-between;
     margin: 18px 16px 0 0;
 }
